--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     /* font-family: 'Inter', sans-serif; */
 }
 header{
-    background-image:url("/images/Kigali.jpg");
+    background-image:url("../images/Kigali.jpg");
     width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
